crates/zeppelin-embed-ffi/include/zeppelin_embed.h


typedef struct ZeOpenRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const uint8_t *path;
    size_t path_len;
    int32_t access_mode;
    int32_t durability_mode;
    int32_t commit_tier;
    uint64_t reader_drain_timeout_ms;
    uint64_t max_resident_bytes;
    uint64_t max_temp_bytes;
} ZeOpenRequest;
typedef struct ZeEmbeddingTower {
    const uint8_t *model_id;
    size_t model_id_len;
    const uint8_t *model_version;
    size_t model_version_len;
    const uint8_t *weights_digest;
    size_t weights_digest_len;
    uint32_t dims;
    int32_t normalization;
    const uint8_t *prompt_prefix;
    size_t prompt_prefix_len;
    uint32_t max_tokens;
    int32_t runtime;
    int32_t compute_units;
    uint32_t has_os_build;
    const uint8_t *os_build;
    size_t os_build_len;
} ZeEmbeddingTower;
typedef struct ZeEmbeddingEpoch {
    struct ZeEmbeddingTower document;
    struct ZeEmbeddingTower query;
    const uint8_t *alignment_digest;
    size_t alignment_digest_len;
} ZeEmbeddingEpoch;
typedef struct ZeEpochRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeEmbeddingEpoch embedding;
    int32_t tokenizer_profile;
    uint32_t reserved;
} ZeEpochRequest;
typedef struct ZeAttributeDefinition {
    uint32_t attribute_id;
    const uint8_t *name;
    size_t name_len;
    int32_t attribute_type;
    uint32_t nullable;
} ZeAttributeDefinition;
typedef struct ZeNamespaceSpec {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeAttributeDefinition *attributes;
    size_t attribute_count;
    uint32_t has_vector_space;
    uint32_t dimensions;
    int32_t normalization;
    const struct ZeEpochRequest *epoch;
} ZeNamespaceSpec;
typedef struct ZeNamespaceOpenRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const uint8_t *root;
    size_t root_len;
    const uint8_t *name;
    size_t name_len;
    struct ZeOpenRequest open;
    const struct ZeNamespaceSpec *spec;
} ZeNamespaceOpenRequest;
typedef struct ZeNamespaceListRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const uint8_t *root;
    size_t root_len;
} ZeNamespaceListRequest;
typedef struct ZeNamespaceEntry {
    const uint8_t *name;
    size_t name_len;
} ZeNamespaceEntry;
typedef struct ZeNamespaceListResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeNamespaceEntry *entries;
    size_t entry_count;
} ZeNamespaceListResult;
typedef struct ZeEpochIdentity {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t embedding_epoch;
    uint64_t tokenizer_epoch;
} ZeEpochIdentity;
typedef struct ZeEpochAliasReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t generation;
    uint64_t previous_embedding_epoch;
    uint64_t previous_tokenizer_epoch;
    uint64_t published_embedding_epoch;
    uint64_t published_tokenizer_epoch;
    uint32_t manifest_committed;
    uint32_t reserved;
} ZeEpochAliasReport;
typedef struct ZeEpochDropReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t generation;
    uint64_t segments_dropped;
    uint64_t bytes_reclaimed;
} ZeEpochDropReport;
typedef struct ZeTextOpenRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeOpenRequest store;
    const uint8_t *bundle_path;
    size_t bundle_path_len;
} ZeTextOpenRequest;
typedef struct ZeDocId {
    uint64_t high;
    uint64_t low;
} ZeDocId;
typedef struct ZeTextDocument {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeDocId doc_id;
    uint64_t revision;
    const uint8_t *text;
    size_t text_len;
} ZeTextDocument;
typedef struct ZeTextIngestRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeTextDocument *documents;
    size_t document_count;
    size_t embed_batch_size;
    size_t seal_every;
    size_t channel_capacity;
} ZeTextIngestRequest;
typedef struct ZeTextQueryRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const uint8_t *text;
    size_t text_len;
    size_t k;
    int32_t legs;
    uint32_t reserved;
} ZeTextQueryRequest;
typedef struct ZeTextQueryHit {
    struct ZeDocId doc_id;
    uint64_t revision;
    uint32_t chunk;
    uint32_t reserved;
    uint8_t *text;
    size_t text_len;
    double score;
    uint32_t has_vector_score;
    uint32_t has_lexical_score;
    double vector_squared_l2;
    double lexical_bm25;
} ZeTextQueryHit;
typedef struct ZeTextQueryResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeTextQueryHit *hits;
    size_t hit_count;
    uint64_t embedding_epoch;
    uint64_t tokenizer_epoch;
} ZeTextQueryResult;
typedef struct ZeStateReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    int32_t state;
    uint32_t reserved;
} ZeStateReport;
typedef struct ZeStatsReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t resident_owned_bytes;
    uint64_t mapped_bytes;
    uint64_t mapped_resident_bytes;
    uint64_t segment_bytes;
    uint64_t active_segment_bytes;
    uint64_t active_row_count;
    uint64_t tombstone_count;
    uint64_t tombstone_bytes;
    uint64_t wal_bytes;
    uint64_t cache_bytes;
    uint64_t temporary_bytes;
    uint64_t query_pool_bytes;
    uint64_t open_files;
    uint64_t active_queries;
    uint64_t active_snapshot_leases;
    uint64_t phys_footprint;
    uint32_t has_phys_footprint;
    uint32_t reserved;
} ZeStatsReport;
typedef struct ZeIngestDocument {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeDocId doc_id;
    uint64_t revision;
    int64_t timestamp;
    const float *vector;
    size_t vector_len;
    const uint8_t *metadata;
    size_t metadata_len;
    const uint8_t *text;
    size_t text_len;
} ZeIngestDocument;
typedef struct ZeIngestRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeIngestDocument *documents;
    size_t document_count;
    size_t dimension;
} ZeIngestRequest;
typedef struct ZeAttributeValue {
    uint32_t attribute_id;
    int32_t value_type;
    uint64_t u64_value;
    int64_t i64_value;
    double f64_value;
    uint32_t bool_value;
    const uint8_t *string_value;
    size_t string_len;
} ZeAttributeValue;
typedef struct ZeUpsertDocument {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeIngestDocument document;
    const struct ZeAttributeValue *attributes;
    size_t attribute_count;
} ZeUpsertDocument;
typedef struct ZeUpsertRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeUpsertDocument *documents;
    size_t document_count;
    size_t dimension;
} ZeUpsertRequest;
typedef struct ZeGetRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeDocId *ids;
    size_t id_count;
    uint32_t include_vector;
    uint32_t include_text;
    uint32_t include_metadata;
    uint32_t include_attributes;
} ZeGetRequest;
typedef struct ZeStoredDocument {
    uint32_t has_document;
    struct ZeDocId doc_id;
    uint64_t revision;
    int64_t timestamp;
    const float *vector;
    size_t vector_len;
    const uint8_t *text;
    size_t text_len;
    const uint8_t *metadata;
    size_t metadata_len;
    const struct ZeAttributeValue *attributes;
    size_t attribute_count;
} ZeStoredDocument;
typedef struct ZeGetResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeStoredDocument *documents;
    size_t document_count;
    size_t missing_count;
    uint64_t generation;
} ZeGetResult;
typedef struct ZeFilterNode {
    int32_t op;
    uint32_t attribute_id;
    const struct ZeAttributeValue *values;
    size_t value_count;
    uint32_t has_lower;
    struct ZeAttributeValue lower;
    uint32_t lower_inclusive;
    uint32_t has_upper;
    struct ZeAttributeValue upper;
    uint32_t upper_inclusive;
    uint32_t children_start;
    uint32_t children_count;
} ZeFilterNode;
typedef struct ZeFilter {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeFilterNode *nodes;
    size_t node_count;
    uint32_t root;
} ZeFilter;
typedef uint64_t ze_cancel_token;
typedef struct ZeScanRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t cursor_generation;
    uint8_t cursor_segment_id[16];
    uint32_t cursor_next_row;
    uint32_t cursor_phase;
    size_t limit;
    int32_t order;
    uint32_t include_vector;
    uint32_t include_text;
    uint32_t include_metadata;
    uint32_t include_attributes;
    uint32_t has_timestamp_range;
    int64_t start_ts;
    int64_t end_ts;
    const struct ZeFilter *filter;
    ze_cancel_token cancel_token;
    uint64_t deadline_ns;
} ZeScanRequest;